fix scripts file linking issues and create initial javascript

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
 #incompleteQuiz, #swiftContent, #cContent, #pythonContent {
   display: none;
 }
+
+
+select {
+  padding: 10px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.btn-outline-dark {
+  width: 100%;
+}
