add functions for quiz to work and update questions

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-#incompleteQuiz, #swiftContent, #cContent, #pythonContent {
+#javascriptContent, #swiftContent, #cContent, #pythonContent {
   display: none;
 }
 
