add resources with links

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-#javascriptContent, #swiftContent, #cContent, #pythonContent, #qualities {
+#incompleteQuiz, #swiftContent, #cContent, #pythonContent, #qualities {
   display: none;
 }
 
