--- a/css/styles.css
+++ b/css/styles.css
@@ -13,21 +13,18 @@ body {
   width: 100%;
   height: 100%;
   padding-top: 30px;
-  font-size: 14px;
+  font-size: 16px;
   Font-Family: 'Bitter', Serif;
-
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
-
 }
 
 h1, h2 {
   Font-Family: 'PT Sans', Sans-Serif;
   Font-Size: 46px;
   font-weight: 400;
-
 }
 
 p, li {
@@ -51,13 +48,28 @@ a {
   color: #ecb540;
 }
 
+hr.light {
+  border-top: 1px solid #292a2d16;
+}
+
+hr.dark {
+  border-top: 1px solid #292a2d;
+}
+
+hr.yellow {
+  border-top: 1px solid #ecb540;
+}
+
 /* Header */
 
 .jumbotron {
   background-color: #fbfaff;
   padding: 0;
   margin: 0;
-  
+}
+
+.jumbotron h1 {
+  line-height: 90px;
 }
 
 .jumbotron h1, .jumbotron p {
@@ -70,7 +82,6 @@ a {
   background-color: #36373a;
   color: #fff;
   padding-top: 30px;
-
 }
 
 #sidebar h4 {
@@ -80,7 +91,7 @@ a {
 }
 
 select {
-  padding: 10px;
+  padding: 15px;
   width: 100%;
   margin-bottom: 30px;
 }
@@ -88,8 +99,8 @@ select {
 .btn-outline-dark {
   background-color: #ecb540;
   color: #292a2d;
-  margin-top: 15px;
-  margin-bottom: 30px;
+  padding: 10px;
+  margin-bottom: 25px;
 }
 
 .btn-outline-dark:hover {
@@ -107,19 +118,35 @@ select {
   display: none;
 }
 
+.quizResults {
+  padding-top: 30px;
+  padding-left: 10px;
+}
 .quizResults h3 {
   text-transform: uppercase;
   font-size: 14px;
 }
 
-.languageLogo {
+img.languageLogo {
   float: right;
-  margin: 20px;
 }
 
 /* Footer Styles */
 
+
 #footer {
   padding-top: 30px;
   text-align: center;
+}
+
+#footer p {
+  width: 60%;
+  margin-right: auto;
+  margin-left: auto;
+  color: #292a2d32;
+
+}
+
+#footer a {
+  color: #ecb54074;
 }
